Coverity analysis defect 171738: Parse warning

XMLWordPrintableJSON

    • Catalog and Routing
    • Fully Compatible
    • ALL
    • CAR Team 2025-04-14
    • 1
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Parse warning

      A parse warning may reduce maintainability of the code, or it may indicate a serious error. A parse warning from the Coverity parser may indicate a bug, or poor coding practice
      /data/mci/8df2c396557fb87fa29efdf21060b868/bazel_cache/18545ad5d47fdc81034b726533d3cf62/execroot/_main_/src/mongo/db/s/shard_server_op_observer.cpp:719: PW.PARAMETER_HIDDEN 171738 declaration hides parameter "uuid" (declared at line 638)

            Assignee:
            Igor Praznik
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: