SERVER-102233 unused parameter uuid is removed from the param list (#34443)

GitOrigin-RevId: dc800629c65c790f659ed0e675a8a9be7dd9a590